# Apeksha-VA

./: .gitignore  .gitmodules  CMakeLists.txt  doc.md  run.sh  smth.html
.github/workflows/: cmake-multi-platform.yml
apeksha-gui/: CMakeLists.txt  main.cpp  new.cpp
apeksha-hotword/: CMakeLists.txt  main.cpp
apeksha-native/: actions.json  apps.json  gemini.js  native.js
apeksha-native/scripts/: copy.js  type.js
apeksha-server/: CMakeLists.txt  main.cpp
apeksha-speechengine-chromeextension/: index.html  manifest.json  script.js  sidepanel.html  sockio.js  style.css
apeksha-speechengine-chromeextension/background/: background.js
libapeksha/: CMakeLists.txt  libapeksha.cpp  libapeksha.hpp
libapeksha-test/: CMakeLists.txt  main.cpp
resources/hotword-model/: apeksha-linux.ppn
